:sparkles: Create Detail screen
Detail screen created
Android KTX dependency added
General code updated

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,23 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="task"
-            type="com.escodro.alkaa.data.local.model.Task" />
+            type="com.escodro.alkaa.data.local.model.Task"/>
 
     </data>
 
-    <CheckBox
-        android:id="@+id/checkbox"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:checked="@{task.completed}"
-        android:orientation="vertical"
-        android:text="@{task.description}"
-        android:textSize="20sp" />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:checked="@{task.completed}"
+            android:gravity="center"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:singleLine="true"
+            android:text="@{task.description}"
+            android:textSize="18sp"
+            android:gravity="center_vertical"
+            tools:text="Item 1"/>
+
+    </LinearLayout>
 
 </layout>
