:sparkles: Create Category List screen
Category screen structure created
Category DAO created
Minor fixes

--- a/app/src/main/res/menu/task_menu.xml
+++ b/app/src/main/res/menu/task_menu.xml
@@ -4,4 +4,8 @@
     <item
         android:id="@+id/action_preference"
         android:title="@string/task_menu_preferences"/>
+
+    <item
+        android:id="@+id/action_category"
+        android:title="@string/task_menu_category"/>
 </menu>
