--- a/app/src/main/res/layout/fragment_new_category.xml
+++ b/app/src/main/res/layout/fragment_new_category.xml
@@ -18,6 +18,7 @@
             android:id="@+id/new_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
             android:text="@={viewModel.newCategory}"
             android:textSize="32sp"/>
 
