--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.escodro.alkaa.ui.detail.DetailViewModel"/>
+            type="com.escodro.alkaa.ui.task.detail.TaskDetailViewModel"/>
 
     </data>
 
