--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="category"
-            type="com.escodro.alkaa.data.local.model.Category"/>
+            type="com.escodro.alkaa.data.local.model.Category" />
 
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="128dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UseCompoundDrawables">
+
+        <com.escodro.alkaa.common.view.ShapeView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:src="@drawable/shape_category_circle"
+            app:shapeColor="#0caf6e" />
 
         <TextView
             android:id="@+id/textview_itemcategory_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawableTop="@mipmap/ic_launcher_round"
+            android:layout_margin="8dp"
             android:gravity="center"
             android:singleLine="true"
-            android:layout_margin="8dp"
             android:text="@{category.name}"
             android:textSize="18sp"
-            tools:text="Item 1"/>
+            tools:text="Item 1" />
 
     </LinearLayout>
 
