--- a/app/src/main/res/layout/fragment_category_new.xml
+++ b/app/src/main/res/layout/fragment_category_new.xml
@@ -22,6 +22,74 @@
             android:text="@={viewModel.newCategory}"
             android:textSize="32sp"/>
 
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:checkedButton="@+id/radiobutton_categorynew_blue"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_categorynew_description">
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_blue"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/blue"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_orange"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/green"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_pink"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/purple"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_red"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/pink"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_purple"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/red"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_green"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/orange"/>
+
+            <RadioButton
+                android:id="@+id/radiobutton_categorynew_yellow"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_weight="1"
+                android:button="@drawable/selector_radio_category"
+                android:buttonTint="@color/yellow"/>
+
+        </RadioGroup>
+
         <Button
             android:id="@+id/button_categorynew_add"
             android:layout_width="match_parent"
