--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Category -->
+    <color name="blue">#62A7E0</color>
+    <color name="green">#4CB27C</color>
+    <color name="purple">#8579AD</color>
+    <color name="pink">#E65E9E</color>
+    <color name="red">#E06969</color>
+    <color name="orange">#F98847</color>
+    <color name="yellow">#E0C03E</color>
+
 </resources>
