:lipstick: Create View to select Category in Task screen
Custom view created
Minor code changes

--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -13,12 +13,62 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@{viewModel.task.description}"
-            android:textSize="48sp"/>
+        <!--<HorizontalScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="16dp"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:scrollbars="none"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--<RadioGroup-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<com.escodro.alkaa.common.view.LabelRadioButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="32dp"-->
+        <!--android:layout_marginStart="16dp"-->
+        <!--android:drawablePadding="8dp"-->
+        <!--android:paddingEnd="24dp"-->
+        <!--android:paddingStart="24dp"-->
+        <!--android:text="Personal"-->
+        <!--app:labelColor="@{viewModel.color1}"/>-->
+
+        <!--<com.escodro.alkaa.common.view.LabelRadioButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="32dp"-->
+        <!--android:drawablePadding="8dp"-->
+        <!--android:paddingEnd="24dp"-->
+        <!--android:paddingStart="24dp"-->
+        <!--android:text="Work"-->
+        <!--app:labelColor="@{viewModel.color2}"/>-->
+
+        <!--<com.escodro.alkaa.common.view.LabelRadioButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="32dp"-->
+        <!--android:drawablePadding="8dp"-->
+        <!--android:paddingEnd="24dp"-->
+        <!--android:paddingStart="24dp"-->
+        <!--android:text="Shopping"-->
+        <!--app:labelColor="@{viewModel.color3}"/>-->
+
+        <!--<com.escodro.alkaa.common.view.LabelRadioButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="32dp"-->
+        <!--android:layout_marginEnd="16dp"-->
+        <!--android:drawablePadding="8dp"-->
+        <!--android:paddingEnd="24dp"-->
+        <!--android:paddingStart="24dp"-->
+        <!--android:text="Family"-->
+        <!--app:labelColor="@{viewModel.color4}"/>-->
+
+        <!--</RadioGroup>-->
+
+        <!--</HorizontalScrollView>-->
 
     </android.support.constraint.ConstraintLayout>
 
