--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,40 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="task"
-            type="com.escodro.alkaa.data.local.model.Task" />
+            type="com.escodro.alkaa.data.local.model.Task"/>
+
+        <variable
+            name="category"
+            type="com.escodro.alkaa.data.local.model.Category"/>
 
     </data>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
-        android:orientation="horizontal">
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <CheckBox
-            android:id="@+id/checkbox_itemtask_completed"
-            android:layout_width="32dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:checked="@{task.completed}"
-            android:gravity="center"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textview_itemtask_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:singleLine="true"
-            android:text="@{task.description}"
-            android:textSize="18sp"
-            tools:text="Item 1" />
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <View
+                android:id="@+id/view_itemtask_color"
+                android:layout_width="6dp"
+                android:layout_height="match_parent"
+                app:background="@{category.color}"/>
+
+            <CheckBox
+                android:id="@+id/checkbox_itemtask_completed"
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:checked="@{task.completed}"
+                android:gravity="center"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/textview_itemtask_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="@{task.description}"
+                android:textSize="18sp"
+                tools:text="Item 1"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </layout>
