--- a/app/src/main/res/menu/task_menu.xml
+++ b/app/src/main/res/menu/task_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_preference"
+        android:id="@string/key_action_open_preference"
         android:title="@string/task_menu_preferences"/>
 
     <item
-        android:id="@+id/action_category"
+        android:id="@string/key_action_open_category"
         android:title="@string/task_menu_category"/>
 </menu>
