--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.escodro.alkaa.ui.task.list.TaskViewModel"/>
+            type="com.escodro.alkaa.ui.task.list.TaskListViewModel"/>
 
     </data>
 
